add fetch rest call
