# src/routes/v1/fetch.py
@@ -1,0 +1,19 @@
+from http.client import BAD_REQUEST
+
+from flask import Blueprint, request, abort
+from marshmallow import ValidationError
+
+from src.validation.ted_save_validation import TedSaveValidation
+
+fetch_blueprint = Blueprint('download_blueprint', __name__)
+ted_save_validation = TedSaveValidation()
+
+
+@fetch_blueprint.route("/ted", methods=['POST'])
+def post_create_new():
+    try:
+        model = ted_save_validation.load(request.json)
+
+        return "ok"
+    except ValidationError as err:
+        abort(BAD_REQUEST, str(err.messages))
