# src/static/api.yaml
@@ -7,7 +7,6 @@ info:
     email: e11709460@student.tuwien.ac.at
 servers:
   - url: 'http://localhost:5000/api/v1'
-  - url: 'http://localhost:5000/api/v2'
 tags:
   - name: ML Model
     description: API for the Machine Learning Model
@@ -56,6 +55,21 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/trainingconfiguration'
+      responses:
+        '200':
+          description: OK
+  /fetch/ted:
+    post:
+      tags:
+        - ML Model
+      summary: Fetch and save Tender from TED
+      requestBody:
+        description: Search criteria and storage lcoation
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/fetch_ted_model'
       responses:
         '200':
           description: OK
@@ -113,6 +127,11 @@ components:
         neg_search_criteria:
           type: integer
           format: integer
+      example:
+        pos_number: 1000
+        neg_number: 1000
+        pos_search_criteria: " AND PC=[72*]"
+        neg_search_criteria: " AND NOT PC=[72*]"
     languageentity:
       type: object
       properties:
@@ -129,3 +148,35 @@ components:
         language: DE
         title: Software- und Systemprogrammierung für hauseigenes ERP-System
         description: 'Für unser hauseigenes ERP-System soll ein Erweiterungsmodul entwickelt werden, das erlaubt, Python-Skripte einzubetten.'
+    fetch_ted_model:
+      type: object
+      required: ["pos_number", "neg_number", "pos_search_criteria", "neg_search_criteria", "dataset_name"]
+      properties:
+        pos_number:
+          type: integer
+          format: integer
+        neg_number:
+          type: integer
+          format: integer
+        pos_search_criteria:
+          type: integer
+          format: integer
+        neg_search_criteria:
+          type: integer
+          format: integer
+        original_languages:
+          type: array
+          items:
+            type: string
+        dataset_name:
+          type: string
+          format: string
+      example:
+        pos_number: 1000
+        neg_number: 1000
+        pos_search_criteria: " AND PC=[72*]"
+        neg_search_criteria: " AND NOT PC=[72*]"
+        original_languages:
+          - "DE"
+          - "EN"
+        dataset_name: "example-dataset"
